--- a/randomise_pretest_pilot.html
+++ b/randomise_pretest_pilot.html
@@ -11,9 +11,9 @@
 
 <meta name="author" content="Stefanie Meliss" />
 
-<meta name="date" content="2023-01-12" />
+<meta name="date" content="2023-01-13" />
 
-<title>Create Randomised Pretest question</title>
+<title>Create Randomised Pretest Questions</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,9 +350,9 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Create Randomised Pretest question</h1>
+<h1 class="title toc-ignore">Create Randomised Pretest Questions</h1>
 <h4 class="author">Stefanie Meliss</h4>
-<h4 class="date">2023-01-12</h4>
+<h4 class="date">2023-01-13</h4>
 
 </div>
 
