create separate files for pilot and fin

--- a/randomise_pretest_fin.html
+++ b/randomise_pretest_fin.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2023-02-01" />
 
-<title>Create Randomised Pretest Questions - Pilot Study</title>
+<title>Create Randomised Pretest Questions - Final version</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,22 +350,47 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Create Randomised Pretest Questions - Pilot
-Study</h1>
+<h1 class="title toc-ignore">Create Randomised Pretest Questions - Final
+version</h1>
 <h4 class="author">Stefanie Meliss</h4>
 <h4 class="date">2023-02-01</h4>
 
 </div>
 
 
+<p>Based upon the results of the pretest, some items and/or distractors
+were modified, please see change log below. Items and/or distractors
+were modified if the correct response rate in the pilot study was ≥ 80%.
+In cases where distractor edits were not possible and items needed to be
+modified, the scope of the item and thereby the breadth of the prior
+knowledge assessment remained unchanged. The wording of items was also
+modified in response to participant feedback to avoid ambiguity.</p>
+<p><strong>Q4</strong> [A grapheme is an individual letter or a group of
+letters that represents…]<br />
+Distractor “A word” was changed to “The sound of a whole word”</p>
+<p><strong>Q7</strong>original question: “Reading fluency contributes to
+reading comprehension by…” changed to “Which of these capabilities is
+least likely to contribute to a person’s reading fluency?” together with
+all distractors</p>
+<p><strong>Q8</strong> original question “Tier 3 vocabulary can be
+thought of as words that…” changed to “Vocabulary tiers form a construct
+that is commonly used to prioritise particular words to teach. Tier 3
+vocabulary can be thought of as…” together with all distractors</p>
+<p><strong>Q9</strong> original question “Which of these comprehension
+strategies does not have a sound basis in evidence?” reworded to “Which
+of these comprehension strategies has the least sound basis in
+evidence?”</p>
+<p><strong>Q10</strong> original question “Pupils make inferences when
+they read…” changed to “In terms of reading, inferences are conclusions
+that…” together with all distractors</p>
 <table>
 <caption>Pretest question with Correct Answers and Distractors</caption>
 <colgroup>
-<col width="30%" />
-<col width="22%" />
-<col width="15%" />
-<col width="19%" />
-<col width="11%" />
+<col width="34%" />
+<col width="16%" />
+<col width="16%" />
+<col width="20%" />
+<col width="12%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -412,7 +437,7 @@ letters that represents…</td>
 <td align="left">A phoneme.</td>
 <td align="left">A syllable.</td>
 <td align="left">A morpheme.</td>
-<td align="left">A word.</td>
+<td align="left">The sound of a whole word.</td>
 </tr>
 <tr class="odd">
 <td align="left">Alongside chunks of spoken sound, the English writing
@@ -432,41 +457,41 @@ properties of oral reading called…</td>
 <td align="left">Accuracy, automaticity and syntax.</td>
 </tr>
 <tr class="odd">
-<td align="left">Reading fluency contributes to reading comprehension
-by…</td>
-<td align="left">Freeing up the cognitive resources that can be devoted
-to building meaning from words.</td>
-<td align="left">Allowing readers to flow through text without
-identifying all of the words on a page.</td>
-<td align="left">Significantly reducing the pupil’s reliance on
-background knowledge.</td>
-<td align="left">Increasing pupils’ working memory capacity.</td>
+<td align="left">Which of these capabilities is <em>least</em> likely to
+contribute to a person’s reading fluency?</td>
+<td align="left">Knowledge of comprehension strategies.</td>
+<td align="left">Word recognition.</td>
+<td align="left">Syntactic knowledge.</td>
+<td align="left">Vocabulary knowledge.</td>
 </tr>
 <tr class="even">
-<td align="left">Tier 3 vocabulary can be thought of as words that…</td>
-<td align="left">Are more likely to be found in an academic context and
-<em>are</em> associated with a particular academic subject or
+<td align="left">Vocabulary tiers form a construct that is commonly used
+to prioritise particular words to teach. Tier 3 vocabulary can be
+thought of as…</td>
+<td align="left">Words that are quite low frequency and restricted to
+specific domains.</td>
+<td align="left">Basic words that pupils are likely to learn through
+their everyday interactions.</td>
+<td align="left">Words that are high frequency for mature language users
+and are found across a variety of domains.</td>
+<td align="left">Words that are found primarily in scientific
 subjects.</td>
-<td align="left">Pupils are likely to learn through their everyday
-interactions.</td>
-<td align="left">Are more likely to be found in an academic context and
-<em>are not</em> associated with a given academic subject.</td>
-<td align="left">Are found primarily in narrative texts.</td>
 </tr>
 <tr class="odd">
-<td align="left">Which of these comprehension strategies does
-<strong>not</strong> have a sound basis in evidence?</td>
+<td align="left">Which of these comprehension strategies has the
+<em>least</em> sound basis in evidence?</td>
 <td align="left">Extrapolating.</td>
 <td align="left">Self-questioning.</td>
 <td align="left">Summarising.</td>
 <td align="left">Clarifying.</td>
 </tr>
 <tr class="even">
-<td align="left">Pupils make inferences when they read…</td>
-<td align="left">All types of text.</td>
-<td align="left">Fiction texts only.</td>
-<td align="left">Non-fiction texts only.</td>
-<td align="left">But not when they read independently.</td>
+<td align="left">In terms of reading, inferences are conclusions
+that…</td>
+<td align="left">Go beyond the literal meaning of the text.</td>
+<td align="left">Don’t require background knowledge.</td>
+<td align="left">Necessarily require conscious thinking.</td>
+<td align="left">Are not necessary when reading non-fiction texts.</td>
 </tr>
 </tbody>
 </table>
@@ -474,11 +499,11 @@ interactions.</td>
 <caption>Pretest question Randomised</caption>
 <colgroup>
 <col width="0%" />
-<col width="29%" />
-<col width="15%" />
+<col width="33%" />
+<col width="16%" />
 <col width="19%" />
+<col width="15%" />
 <col width="14%" />
-<col width="21%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -493,16 +518,17 @@ interactions.</td>
 <tbody>
 <tr class="odd">
 <td align="left">10</td>
-<td align="left">Pupils make inferences when they read…</td>
-<td align="left">All types of text.</td>
-<td align="left">Fiction texts only.</td>
-<td align="left">Non-fiction texts only.</td>
-<td align="left">But not when they read independently.</td>
+<td align="left">In terms of reading, inferences are conclusions
+that…</td>
+<td align="left">Go beyond the literal meaning of the text.</td>
+<td align="left">Don’t require background knowledge.</td>
+<td align="left">Necessarily require conscious thinking.</td>
+<td align="left">Are not necessary when reading non-fiction texts.</td>
 </tr>
 <tr class="even">
 <td align="left">9</td>
-<td align="left">Which of these comprehension strategies does
-<strong>not</strong> have a sound basis in evidence?</td>
+<td align="left">Which of these comprehension strategies has the
+<em>least</em> sound basis in evidence?</td>
 <td align="left">Summarising.</td>
 <td align="left">Clarifying.</td>
 <td align="left">Self-questioning.</td>
@@ -524,7 +550,7 @@ with meaning called…</td>
 letters that represents…</td>
 <td align="left">A syllable.</td>
 <td align="left">A phoneme.</td>
-<td align="left">A word.</td>
+<td align="left">The sound of a whole word.</td>
 <td align="left">A morpheme.</td>
 </tr>
 <tr class="odd">
@@ -538,15 +564,12 @@ properties of oral reading called…</td>
 </tr>
 <tr class="even">
 <td align="left">7</td>
-<td align="left">Reading fluency contributes to reading comprehension
-by…</td>
-<td align="left">Allowing readers to flow through text without
-identifying all of the words on a page.</td>
-<td align="left">Significantly reducing the pupil’s reliance on
-background knowledge.</td>
-<td align="left">Increasing pupils’ working memory capacity.</td>
-<td align="left">Freeing up the cognitive resources that can be devoted
-to building meaning from words.</td>
+<td align="left">Which of these capabilities is <em>least</em> likely to
+contribute to a person’s reading fluency?</td>
+<td align="left">Word recognition.</td>
+<td align="left">Syntactic knowledge.</td>
+<td align="left">Vocabulary knowledge.</td>
+<td align="left">Knowledge of comprehension strategies.</td>
 </tr>
 <tr class="odd">
 <td align="left">3</td>
@@ -582,18 +605,138 @@ words. These are generally described as…</td>
 </tr>
 <tr class="even">
 <td align="left">8</td>
-<td align="left">Tier 3 vocabulary can be thought of as words that…</td>
-<td align="left">Pupils are likely to learn through their everyday
-interactions.</td>
-<td align="left">Are more likely to be found in an academic context and
-<em>are not</em> associated with a given academic subject.</td>
-<td align="left">Are found primarily in narrative texts.</td>
-<td align="left">Are more likely to be found in an academic context and
-<em>are</em> associated with a particular academic subject or
+<td align="left">Vocabulary tiers form a construct that is commonly used
+to prioritise particular words to teach. Tier 3 vocabulary can be
+thought of as…</td>
+<td align="left">Basic words that pupils are likely to learn through
+their everyday interactions.</td>
+<td align="left">Words that are high frequency for mature language users
+and are found across a variety of domains.</td>
+<td align="left">Words that are found primarily in scientific
 subjects.</td>
+<td align="left">Words that are quite low frequency and restricted to
+specific domains.</td>
 </tr>
 </tbody>
 </table>
+<div id="question-texts-and-answers" class="section level5">
+<h5>Question texts and answers</h5>
+<p><strong>1. In terms of reading, inferences are conclusions
+that…</strong></p>
+<ol style="list-style-type: lower-alpha">
+<li>Go beyond the literal meaning of the text.<br />
+</li>
+<li>Don’t require background knowledge.<br />
+</li>
+<li>Necessarily require conscious thinking.<br />
+</li>
+<li>Are not necessary when reading non-fiction texts.</li>
+</ol>
+<p><strong>2. Which of these comprehension strategies has the least
+sound basis in evidence?</strong></p>
+<ol style="list-style-type: lower-alpha">
+<li>Summarising.<br />
+</li>
+<li>Clarifying.<br />
+</li>
+<li>Self-questioning.<br />
+</li>
+<li>Extrapolating.</li>
+</ol>
+<p><strong>3. Alongside chunks of spoken sound, the English writing
+system represents the smallest chunks within words that are associated
+with meaning called…</strong></p>
+<ol style="list-style-type: lower-alpha">
+<li>Morphemes.<br />
+</li>
+<li>Lexemes.<br />
+</li>
+<li>Syntactic identifiers.<br />
+</li>
+<li>Graphemes.</li>
+</ol>
+<p><strong>4. A grapheme is an individual letter or a group of letters
+that represents… </strong></p>
+<ol style="list-style-type: lower-alpha">
+<li>A syllable.<br />
+</li>
+<li>A phoneme.<br />
+</li>
+<li>The sound of a whole word.<br />
+</li>
+<li>A morpheme.</li>
+</ol>
+<p><strong>5. Reading fluency is commonly identified through three
+properties of oral reading called…</strong></p>
+<ol style="list-style-type: lower-alpha">
+<li>Accuracy, automaticity and semantics.<br />
+</li>
+<li>Accuracy, automaticity and prosody.<br />
+</li>
+<li>Accuracy, automaticity and syntax.<br />
+</li>
+<li>Accuracy, automaticity and flow.</li>
+</ol>
+<p><strong>6. Which of these capabilities is least likely to contribute
+to a person’s reading fluency?</strong></p>
+<ol style="list-style-type: lower-alpha">
+<li>Word recognition.<br />
+</li>
+<li>Syntactic knowledge.<br />
+</li>
+<li>Vocabulary knowledge.<br />
+</li>
+<li>Knowledge of comprehension strategies.</li>
+</ol>
+<p><strong>7. A phoneme can be thought of as…</strong></p>
+<ol style="list-style-type: lower-alpha">
+<li>The chunk of sound associated with a morpheme.<br />
+</li>
+<li>The chunk of sound associated with a syllable.<br />
+</li>
+<li>The smallest chunk of spoken sound that can distinguish one word
+from another.<br />
+</li>
+<li>Any chunk of sound that is smaller than a whole word.</li>
+</ol>
+<p><strong>8. An orthography is…</strong></p>
+<ol style="list-style-type: lower-alpha">
+<li>The set of conventions associated with a phonics programme.<br />
+</li>
+<li>The set of conventions associated with a written language.<br />
+</li>
+<li>The set of conventions associated with a handwriting system.<br />
+</li>
+<li>The set of conventions associated with a spoken language.</li>
+</ol>
+<p><strong>9. Reading comprehension can be described as relying on two
+capacities: the ability to recognise words and build meaning from words.
+These are generally described as…</strong></p>
+<ol style="list-style-type: lower-alpha">
+<li>Word recognition and background knowledge.<br />
+</li>
+<li>Word recognition and language comprehension.<br />
+</li>
+<li>Word recognition and reading comprehension.<br />
+</li>
+<li>Word recognition and fluency.</li>
+</ol>
+<p><strong>10. Vocabulary tiers form a construct that is commonly used
+to prioritise particular words to teach. Tier 3 vocabulary can be
+thought of as…</strong></p>
+<ol style="list-style-type: lower-alpha">
+<li>Basic words that pupils are likely to learn through their everyday
+interactions.<br />
+</li>
+<li>Words that are high frequency for mature language users and are
+found across a variety of domains.<br />
+</li>
+<li>Words that are found primarily in scientific subjects.<br />
+</li>
+<li>Words that are quite low frequency and restricted to specific
+domains.</li>
+</ol>
+</div>
 
 
 
